--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <title>BreakyRoom</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to BreakyRoom</h1>
+  <h1>BreakyRoom</h1>
   <p>Play games during break.</p>
 </body>
 </html>
