--- a/games.html
+++ b/games.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Games – BreakyRoom</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,17 +18,18 @@
 </header>
 
 <section class="games">
-  <h1>All Games</h1>
+  <h1>Games</h1>
+  <p>Click a game to play.</p>
 
   <div class="grid">
-    <a href="play.html?game=1" class="game">Game 1</a>
-    <a href="play.html?game=2" class="game">Game 2</a>
-    <a href="play.html?game=3" class="game">Game 3</a>
-    <a href="play.html?game=4" class="game">Game 4</a>
-    <a href="play.html?game=5" class="game">Game 5</a>
-    <a href="play.html?game=6" class="game">Game 6</a>
-    <a href="play.html?game=7" class="game">Game 7</a>
-    <a href="play.html?game=8" class="game">Game 8</a>
+    <a href="play.html?game=1" class="game">Slope</a>
+    <a href="play.html?game=2" class="game">Run 3</a>
+    <a href="play.html?game=3" class="game">1v1.lol</a>
+    <a href="play.html?game=4" class="game">Retro Bowl</a>
+    <a href="play.html?game=5" class="game">Shell Shockers</a>
+    <a href="play.html?game=6" class="game">Moto X3M</a>
+    <a href="play.html?game=7" class="game">Basketball Stars</a>
+    <a href="play.html?game=8" class="game">Cookie Clicker</a>
   </div>
 </section>
 
